golang-app/deploy/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: golang-demo
  name: golang-demo-route
  namespace: golang-application
spec:
  host:
  port:
    targetPort: http
  to:
    kind: Service
    name: golang-demo-service
    weight: 100
  wildcardPolicy: None
